# finetune-simple-llm

./: .gitignore  README.md  finetune_in_colab.ipynb  inference.py  prepare_data.py  pyproject.toml  train.py
